player ships are now visible. basic victory conditions set, still need to be tested. have to implement a mechanism preventing clicks after victory.

--- a/src/style.css
+++ b/src/style.css
@@ -46,12 +46,8 @@ body {
     grid-template-columns: repeat(10, 1fr);
 }
 
-.playerCell{
-
-}
-
-.cpuCell{
-
+.playerShip{
+    background-color: black;
 }
 
 /* A class for hits */
@@ -61,4 +57,12 @@ body {
 /* A class for misses */
 .miss{
     background-color: green;
+}
+
+.victoryBanner1{
+
+}
+
+.victoryBanner2{
+    
 }
